# tiberio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  BRANCHING.md  LICENSE.md  README.md  Taskfile.dist.yml  gitleaks.toml  pyproject.toml
.agents/skills/appkit-commons/: SKILL.md
.agents/skills/boost/: SKILL.md
.agents/skills/boost/evals/: evals.json
.agents/skills/code-cleanup/: SKILL.md
.agents/skills/commit-msg/: SKILL.md
.agents/skills/create-readme/: SKILL.md
.agents/skills/docker-multi-stage/: SKILL.md
.agents/skills/frontend-design/: SKILL.md
.agents/skills/python-clean-code/: SKILL.md
.agents/skills/python-clean-code/evals/: evals.json
.agents/skills/python-coding/: SKILL.md
.agents/skills/python-coding/references/: clean-code.md  testing.md
.agents/skills/release/: SKILL.md
.agents/skills/skills-creator/: SKILL.md
.agents/skills/skills-find/: SKILL.md
.claude/: settings.json
.claude/agents/: pr-agent.md  python-pro.md
.claude/skills/: appkit-commons  boost  python-coding  skills-creator  skills-find
.github/: dependabot.yml
.github/prompts/: boost.prompt.md  cleanup.prompt.md
config/: devices.yaml
docs/: datenschutz.md  index.md  package-lock.json  package.json  skill-setup.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/architecture/: hexagonal.md  index.md  message-flows.md
docs/development/: index.md
docs/guide/: cli.md  configuration.md  getting-started.md  index.md
docs/modules/: adapters.md  commands.md  composition.md  domain.md  interfaces-alexa.md  interfaces-oauth.md  ports.md
lambda/directive_proxy/: handler.py
lambda/oauth_proxy/: handler.py
lambda/shared/: __init__.py  beacon.py  runtime.py
pantau/: composition.py
pantau/adapters/: auth_code_store.py  fritz_thermostat_adapter.py  harmony_tv_adapter.py  homekit_blind_adapter.py  jwt_service.py  mock_beacon_publisher.py  mock_blind_adapter.py  mock_thermostat_adapter.py  mock_token_validator.py  mock_tv_adapter.py  s3_beacon_publisher.py  sqlite_user_store.py  yaml_device_registry.py
pantau/api/: app.py  logging_setup.py  middleware.py
pantau/application/: publish_beacon.py
pantau/cli/: beacon.py  setup.py  users.py
pantau/commands/: __init__.py  adjust_range.py  adjust_volume.py  discover_devices.py  list_connected_devices.py  set_mute.py  set_range.py  set_temperature.py  set_volume.py  turn_off.py  turn_on.py
pantau/commands/blinds/: set_blind_position.py
pantau/commands/heating/: set_thermostat_temperature.py
pantau/commands/tv/: activate_channel.py  set_tv_mute.py
pantau/config/: settings.py
pantau/domain/: beacon.py  errors.py  models.py
pantau/interfaces/alexa/: directive_router.py
pantau/interfaces/alexa/handlers/: range.py
pantau/interfaces/oauth/: router.py
pantau/ports/: beacon_publisher_port.py  blind_port.py  capability_resolver_port.py  listable_port.py  mute_port.py  power_port.py  range_port.py  temperature_port.py  thermostat_port.py  tv_port.py  user_store_port.py  volume_port.py
scripts/: dev_supervisor.py  run-dev.sh  stop-dev.sh
scripts/sample-events/: README.md  discovery.json  power_turn_on_channel.json  range_set_range_value.json  speaker_set_mute.json  thermostat_set_target_temperature.json
skill-package/: accountLinking.json  skill.json
taskfiles/: Taskfile.docs.yml  Taskfile.terraform-aws.yaml
tasks/: Taskfile.db.yml  Taskfile.docker.yml  Taskfile.qa.yml  Taskfile.release.yml  Taskfile.terraform-azure.yaml
terraform/: deploy-aws.sh  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/modules/apigw_oauth/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda_directive/: main.tf  outputs.tf  variables.tf
terraform/modules/s3_beacon/: main.tf  outputs.tf  variables.tf
tests/: test_app_startup.py  test_beacon_lifespan.py  test_beacon_settings.py  test_composition_beacon.py  test_connected_devices.py  test_health.py  test_logging_setup.py  test_publish_beacon.py  test_yaml_device_registry.py
tests/adapters/: test_fritz_thermostat_adapter.py  test_harmony_tv_adapter.py  test_homekit_blind_adapter.py  test_jwt_service.py  test_s3_beacon_publisher.py  test_sqlite_user_store.py
tests/cli/: test_beacon_cli.py  test_setup_cli.py  test_users_cli.py
tests/commands/: conftest.py  test_discover_devices.py  test_list_connected_devices.py
tests/commands/blinds/: test_blind_commands.py
tests/commands/heating/: test_heating_commands.py
tests/commands/tv/: test_tv_commands.py  test_volume_commands.py
tests/interfaces/: test_middleware.py
tests/interfaces/alexa/: conftest.py  test_directive_auth.py  test_directive_hardening.py  test_directive_router.py
tests/interfaces/oauth/: conftest.py  test_authorize.py  test_token.py
tests/lambdas/: conftest.py  test_directive_proxy.py  test_oauth_proxy.py  test_shared_beacon.py
tiberio/: composition.py
tiberio/adapters/: fritz_thermostat_adapter.py  harmony_tv_adapter.py  homekit_blind_adapter.py  mock_thermostat_adapter.py  yaml_device_registry.py
tiberio/cli/: setup.py
tiberio/commands/: discover_devices.py  get_device_state.py
tiberio/domain/: models.py
tiberio/interfaces/alexa/: router.py
tiberio/interfaces/alexa/handlers/: discovery.py  report_state.py  speaker.py  thermostat.py
tiberio/interfaces/oauth/: router.py
tiberio/ports/: temperature_port.py
