[project]
name = "app"
version = "1.0.0"
description = "Project template for python apps. Change as needed."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Jens Rehpöhler" }]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
]

dependencies = [
    "fastmcp==3.3.1",
    "typer==0.25.1",
    "rich==15.0.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "aiosqlite==0.22.1",
]

[dependency-groups]
dev = [
    "bump-my-version==1.3.0",
    "detect-secrets==1.5.0",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-httpserver==1.1.5",
    "ruff==0.15.13",
    "mypy==2.1.0",
    "types-PyYAML==6.0.12.20260510",
]

[project.scripts]
# app = "app.cli.main:app"
# app-mcp = "app.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/jenreh/python-kit"
Repository = "https://github.com/jenreh/python-kit"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "README.md",
    "pyproject.toml",
]
exclude = [
    ".agents/",
    ".cache/",
    ".claude/",
    ".devcontainer/",
    ".github/",
    ".vscode/",
    "skill/",
    "spec/",
    "tests/",
    ".env",
    ".gitignore",
    ".pre-commit-config.yaml",
    "AGENTS.md",
    "coverage.xml",
    "Taskfile.yaml",
]

[tool.bumpversion]
commit = false
current_version = "1.0.0"
tag = false
allow-dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = '![Version](https://img.shields.io/badge/version-{current_version}-blue)'
replace = '![Version](https://img.shields.io/badge/version-{new_version}-blue)'

[tool.ruff]
cache-dir = ".cache/ruff"
indent-width = 4
line-length = 88
target-version = "py314"
extend-exclude = [
    ".cache",
    ".claude",
    ".devcontainer",
    ".github",
    ".vscode",
    "build",
    "dist",
    "docs",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "EM101",
    "EM102",
    "ISC001",
    "N811",
    "N818",
    "PLR0913",
    "PT011",
    "PT012",
    "RUF012",
    "RUF100",
    "SIM300",
    "E501",
    "B008",
    "ASYNC240",
    "PYI034",
    "S101",
    "PLR0912",
    "ASYNC109",
    "ARG001",
    "PLR2004",
    "PLW0603",
    "PLC0415",
    "SIM105",
    "PLW2901",
    "PLR0911",
    "B017",
    "RUF001",
    "RUF002",
    "RUF003",
]
select = [
    "A",
    "ANN001",
    "ANN201",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FIX",
    "G",
    "ICN",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLF001",
    "T20",
    "TID",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]
"test_**.py" = [
    "S101",
    "PLR2004",
    "ANN001",
    "S106",
    "SLF001",
    "RET504",
    "PERF401",
    "E402",
    "S501",
    "S110",
    "ARG002",
    "ARG005",
    "E741",
    "RUF059",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = ["*.pyi"]

[tool.ruff.lint.isort]
known-local-folder = ["sonos"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "sonos_live: requires real Sonos hardware on the network",
]

[tool.mypy]
cache_dir = ".cache/mypy"
disallow_untyped_defs = true
incremental = true
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    ".cache",
    ".claude",
    ".venv",
    "build",
    "dist",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = []

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
