[project]
name = "pantau-alexa"
version = "0.0.2"
description = "Alexa Smart Home Skill for home automation (TV, blinds, thermostats) via a self-hosted FastAPI server."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Jens Rehpöhler" }]
keywords = ["alexa", "smart-home", "home-automation", "fastapi"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
]

dependencies = [
    "aiosqlite==0.22.1",
    "fastapi==0.136.3",
    "fritzctl-py",
    "harmonyhub-py",
    "homekit-py",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.14.1",
    "pydantic==2.13.4",
    "python-jose[cryptography]==3.5.0",
    "pyyaml==6.0.3",
    "typer>=0.25.1",
    "uvicorn[standard]==0.49.0",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "python-dotenv>=1.2.2",
    "boto3>=1.43.27",
]

[dependency-groups]
dev = [
    "bump-my-version==1.3.0",
    "detect-secrets==1.5.0",
    "httpx==0.28.1",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-httpserver==1.1.5",
    "pytest==9.0.3",
    "ruff==0.15.16",
    "ty==0.0.46",
    "types-passlib>=1.7.7",
    "types-PyYAML==6.0.12.20260510",
]

[project.scripts]
pantau = "pantau.api.app:main"
pantau-users = "pantau.cli.users:main"

[project.urls]
Homepage = "https://github.com/jenreh/pantau-alexa"
Repository = "https://github.com/jenreh/pantau-alexa"

[tool.hatch.build.targets.wheel]
packages = ["pantau"]

[tool.hatch.build.targets.sdist]
include = [
    "/pantau",
    "/config",
    "README.md",
    "pyproject.toml",
]
exclude = [
    ".agents/",
    ".cache/",
    ".claude/",
    ".devcontainer/",
    ".github/",
    ".vscode/",
    "spec/",
    "tests/",
    ".env",
    ".gitignore",
    ".pre-commit-config.yaml",
    "AGENTS.md",
    "coverage.xml",
    "terraform/",
]

[tool.bumpversion]
commit = false
current_version = "0.0.2"
tag = false
allow-dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = '![Version](https://img.shields.io/badge/version-{current_version}-blue)'
replace = '![Version](https://img.shields.io/badge/version-{new_version}-blue)'

[tool.ruff]
cache-dir = ".cache/ruff"
indent-width = 4
line-length = 88
target-version = "py314"
extend-exclude = [
    ".cache",
    ".claude",
    ".devcontainer",
    ".github",
    ".venv",
    ".venv.mac",
    ".vscode",
    "build",
    "dist",
    "docs",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "EM101",
    "EM102",
    "ISC001",
    "N811",
    "N818",
    "PLR0913",
    "PT011",
    "PT012",
    "RUF012",
    "RUF100",
    "SIM300",
    "E501",
    "B008",
    "ASYNC240",
    "PYI034",
    "S101",
    "PLR0912",
    "ASYNC109",
    "ARG001",
    "PLR2004",
    "PLW0603",
    "PLC0415",
    "SIM105",
    "PLW2901",
    "PLR0911",
    "B017",
    "RUF001",
    "RUF002",
    "RUF003",
]
select = [
    "A",
    "ANN001",
    "ANN201",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "EM",
    "EXE",
    "F",
    "FIX",
    "G",
    "ICN",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLF001",
    "T20",
    "TID",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]
"test_**.py" = [
    "S101",
    "PLR2004",
    "ANN001",
    "S105",
    "S106",
    "SLF001",
    "RET504",
    "PERF401",
    "E402",
    "S501",
    "S110",
    "ARG002",
    "ARG005",
    "E741",
    "RUF059",
]
"conftest.py" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = ["*.pyi"]

[tool.ruff.lint.isort]
known-local-folder = ["pantau"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real hardware on the network",
    "aws: requires real AWS credentials",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = [
    ".agents",
    ".cache",
    ".claude",
    ".venv",
    "build",
    "dist",
    "examples",
    "skill",
    "tests/evals",
]

[tool.ty.rules]
unresolved-import = "warn"
missing-argument = "error"

[tool.mypy]
cache_dir = ".cache/mypy"

[[tool.mypy.overrides]]
module = ["harmonyhub.*", "homekit.*", "fritzctl.*", "jose.*", "bcrypt.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["pantau"]
omit = [
    "pantau/ports/*", # Protocol stubs — interface definitions only
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 80
show_missing = true
skip_covered = true

[tool.uv.sources]
harmonyhub-py = { path = "../harmonyhub-py", editable = true }
homekit-py = { path = "../homekit-py", editable = true }
fritzctl-py = { path = "../fritzhome-py", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
